# protochess

./: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
protochess-client/: README.md  package-lock.json  package.json  tsconfig.json
protochess-client/public/: index.html  manifest.json
protochess-client/src/: App.css  App.tsx  ClientHandler.tsx  Contact.tsx  Home.tsx  OpponentConnector.tsx  Stuff.tsx  client.tsx  index.tsx
protochess-client/src/components/: ReadOnlyCopyTextBox.tsx
protochess-client/src/components/ChatBox/: ChatBox.css  ChatBox.tsx
protochess-client/src/components/ChessGame/: Board.ts  ChessBoard.tsx  ChessGame.css  ChessGame.tsx  ChessPiece.tsx  ChessPieces.tsx  ChessTile.tsx  ColorConstants.ts  PieceHandler.ts  PieceLoader.ts
protochess-client/src/components/GenerateChallengeURL/: GenerateChallengeURL.css  GenerateChallengeURL.tsx
protochess-client/src/containers/: ChatContainer.tsx  ChessGameContainer.tsx  GenerateChallengeURLContainer.tsx  GenerateRoomLink.css  GenerateRoomLink.tsx  PlayerListContainer.tsx
protochess-client/src/pages/: ChessTest.tsx  Contact.tsx  Home.tsx  Lobby.css  Lobby.tsx  OpponentConnector.tsx  Stuff.tsx
protochess-common/: Cargo.toml  README.md
protochess-common/src/: lib.rs
protochess-core/: README.md  package.json
protochess-core/src/: Board.ts  BoardLocation.ts  GameMaster.ts  GameState.ts  Movement.ts  MovementPattern.ts  Piece.ts  PieceBuilder.ts  PieceType.ts  Tile.ts  TileType.ts  index.ts
protochess-core/src/classic/: Bishop.ts  King.ts  Knights.ts  Pawn.ts  Queen.ts  Rook.ts
protochess-engine/: CMakeLists.txt  README.md  binding.gyp  index.ts  main.cpp  package.json  protochess_engine.cpp  protochess_engine.h  tsconfig.json
protochess-engine-2/: main.cpp
protochess-engine-2/include/: protochess_engine.h
protochess-engine-2/src/: attacktables.cpp  attacktables.h  bitsetutil.cpp  bitsetutil.h  gamestate.cpp  gamestate.h  movegen.cpp  movegen.h  piecerules.cpp  piecerules.h  protochess_engine.cpp  types.h
protochess-engine-3/: CMakeLists.txt  main.cpp
protochess-engine-3/include/: protochess_engine.h
protochess-engine-3/src/: attacktables.cpp  attacktables.h  bitboard.h  bitboardutil.cpp  bitboardutil.h  movegen.cpp  movegen.h  perft.cpp  perft.h  piecerules.cpp  piecerules.h  position.cpp  position.h  protochess_engine.cpp  rankfile.cpp  rankfile.h  rulebook.cpp  rulebook.h  types.h
protochess-engine-rs/: Cargo.toml  README.md
protochess-engine-rs/src/: README.md  fen.rs  lib.rs  main.rs  mask_handler.rs  movegen.rs  rankfile.rs
protochess-engine-rs/src/constants/: fen.rs  mod.rs
protochess-engine-rs/src/evaluator/: mod.rs
protochess-engine-rs/src/move_generator/: bitboard_moves.rs  mask_handler.rs  mod.rs
protochess-engine-rs/src/move_generator/attack_tables/: mask_handler.rs  mod.rs
protochess-engine-rs/src/position/: castle_rights.rs  mod.rs  movement_pattern.rs  piece.rs  piece_set.rs  position_properties.rs  zobrist_table.rs
protochess-engine-rs/src/position/piece_set/: mod.rs  movement_pattern.rs
protochess-engine-rs/src/searcher/: mod.rs
protochess-engine-rs/src/transposition_table/: mod.rs
protochess-engine-rs/src/types/: bitboard.rs  chess_move.rs  mod.rs
protochess-engine-rs/tests/: custom_pieces.rs  fen.rs  test.rs
protochess-engine-wasm/: Cargo.toml  README.md
protochess-engine-wasm/src/: lib.rs
protochess-engine/include/shared/: chess.h  protochess_engine.h  protochess_engine_js.h
protochess-engine/src/: Board.cpp  Board.h  GameState.cpp  GameState.h  Piece.cpp  Piece.h  bitsetUtil.cpp  bitsetUtil.h  bitsetutil.cpp  bitsetutil.h  board.cpp  board.h  chess.cpp  gamestate.cpp  gamestate.h  movegen.cpp  movegen.h  moverules.cpp  moverules.h  piece.cpp  piece.h  piecerules.cpp  piecerules.h  player.cpp  player.h  protochess_engine.cpp  protochess_engine_js.cpp  rankfile.h  types.h
protochess-front/: README.md  package.json  rollup.config.js
protochess-front-svelte/public/: index.html
protochess-front-svelte/src/: App.svelte  GameRoom.svelte  WebChess.svelte  WebsocketStore.js
protochess-front-svelte/src/Chat/: Chat.svelte
protochess-front-svelte/src/Chess/: Board.svelte  Piece.svelte  Tile.svelte
protochess-front-svelte/src/ChessEditor/: ChessEditor.svelte  MovementPatternDisplay.svelte  PieceEditor.svelte
protochess-front-svelte/src/MovementPatternDisplay/: DisplayMode.js  MovementPatternDisplay.svelte
protochess-front-svelte/src/MovementPatternDisplayBar/: MovementPatternDisplayBar.svelte
protochess-front-svelte/src/PlayersList/: PlayersList.svelte
protochess-front-svelte/src/chat/: Chat.svelte
protochess-front-svelte/src/chess/: Board.svelte  ColorConstants.js  Piece.svelte  Tile.svelte  TileHighlight.svelte  WebChess.svelte
protochess-front/scripts/netlify/: .gitignore  netlify.toml  package.json
protochess-front/src/: App.svelte  WebsocketStore.js  _WebsocketStore.js
protochess-front/src/components/: MediaQuery.svelte  Modal.svelte
protochess-front/src/pages/: GameRoom.svelte  WebChess.svelte  _PlayButtons.svelte  _ProtochessInfo.svelte  _WebChat.svelte  _fallback.svelte  _layout.svelte  about.svelte  faq.svelte  index.svelte  singleplayer.svelte  test.svelte
protochess-front/static/: __index.html  global.css
protochess-server/: MyRoom.ts  README.md  StateHandlerRoom.ts  index.js  index.ts  package-lock.json  package.json
protochess-server-rs/: Cargo.toml  README.md
protochess-server-rs/src/: client.rs  client_message.rs  main.rs  room.rs  room_manager.rs  room_message.rs  websockets.rs
protochess-server/loadtest/: example.ts
protochess-server/src/: StateHandlerRoom.ts
protochess-shared/: package-lock.json  package.json  tsconfig.json
protochess-shared/src/: Player.ts  State.ts  index.ts
protochess-shared/src/chess/: Board.ts  BoardLocation.ts  CapturePattern.ts  GameMaster.ts  GameState.ts  Movement.ts  MovementPattern.ts  Piece.ts  PieceBuilder.ts  PieceType.ts  Tile.ts  TileType.ts  index.ts
src/: App.js  server.js
src/lobby/: lobby.js
(+30 files in other folders)
