[package]
name = "protochess-common"
version = "0.1.0"
authors = ["raymond <raytran@mit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
protochess-engine-rs = {path = "../protochess-engine-rs"}
