[package]
name = "protochess-engine-rs"
version = "0.1.0"
authors = ["raytr <ray.tran120@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 3

[dependencies]
scan-rules = "0.2.0"
arrayvec = "0.5.1"
numext-fixed-uint = "0.1.4"
