[package]
name = "protochess-engine-rs"
version = "0.1.0"
authors = ["raytr <ray.tran120@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3

[features]
stdweb = [ "instant/stdweb" ]
wasm-bindgen = [ "instant/wasm-bindgen" ]

[dependencies]
instant = { version = "0.1", features = [ "now", "wasm-bindgen" ] }
scan-rules = "0.2.0"
rand = "0.7.3"
arrayvec = "0.5.1"
numext-fixed-uint = "0.1.4"
ahash = "0.3.5"
lazy_static = "1.4.0"
